# coinfinder

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ROARY_nov30_fasttree.newick  \  binomial_test.cpp  both.py  bugfix.cpp  bugfix.h  check_zeroes.R  cmake_install.cmake  coincidence-phylo.h  coincidence.cpp  coincidence.cpp.bck  coincidence.h  coinfinder  common_ancestor.py  connectivity.cpp  connectivity.h  constants.h  core.nex.con.tre  core.nex.con.tre.newick  create_roary.py  dataset.cpp  dataset.h  elements.cpp  elements.h  format_roary.py  gexf.cpp  gexf.h  helper_label_internal_nodes.py  id_lookup.cpp  id_lookup.h  lineage.R  lineage.cpp  lineage.h  main.cpp  network.R  (+18 more)
coinfind-code/: binomial_test.h  bugfix.cpp  check_newick.R  coincidence.cpp  connectivity.cpp  create_roary.py  dataset.cpp  elements.cpp  elements.h  format_roary.py  gexf.cpp  gexf.h  gml.cpp  gml.h  lineage.R  lineage.cpp  lineage.h  main.cpp  network.R  network.cpp  network.h  network_nophylogeny.R  parameters.cpp  parameters.h
coinfind-code/scripts/: roary-to-coin.py
test_data/: alpha.tsv  beta.tsv
