cmake_minimum_required(VERSION 3.6)
project(coinfinder)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(Boost_USE_STATIC_LIBS ON)

set(SOURCE_FILES main.cpp id_lookup.cpp id_lookup.h dataset.cpp dataset.h coincidence.cpp coincidence.h connectivity.cpp connectivity.h binomial_test.cpp binomial_test.h significance.cpp significance.h constants.h parameters.cpp parameters.h elements.cpp elements.h test_cases.cpp test_cases.h phylomax.py common_ancestor.py bugfix.h bugfix.cpp lineage.cpp lineage.h gexf.cpp gexf.h network.cpp network.h)
add_executable(coinfinder ${SOURCE_FILES})

target_compile_features(coinfinder PRIVATE cxx_std_14)

#SET(PYTHON_INCLUDE_PATH /Library/Frameworks/Python.framework/Versions/3.6/include/python3.6m/)
#SET(PYTHON_LIBRARIES /Library/Frameworks/Python.framework/Versions/3.6/lib/libpython3.6m.dylib)
#SET(PYTHON_EXECUTABLE /Library/Frameworks/Python.framework/Versions/3.6/bin/python3)
#SET(PYTHON_INCLUDE_DIR /Library/Frameworks/Python.framework/Versions/3.6/include/python3.6m/)
find_package(PythonInterp 3.6 REQUIRED)
find_package(PythonLibs 3.6 REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
target_link_libraries(coinfinder ${PYTHON_LIBRARIES})

set(Boost_INCLUDE_DIR /Users/s23410fw/Documents/software/boost_1_66_0)
set(BOOST_LIBRARYDIR /Users/s23410fw/Documents/software/boost_1_66_0/libs/)
set(BOOST_ROOT /Users/s23410fw/Documents/software/boost_1_66_0)
find_package(Boost COMPONENTS filesystem system REQUIRED)
#find_package(Boost REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIR})
target_link_libraries(coinfinder ${Boost_LIBRARIES})

#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c++0x")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
#include(FindOpenMP)
set(CMAKE_C_COMPILER "/Users/s23410fw/Documents/software/clang+llvm-7.0.0-x86_64-apple-darwin/bin/clang")
set(CMAKE_CXX_COMPILER "/Users/s23410fw/Documents/software/clang+llvm-7.0.0-x86_64-apple-darwin/bin/clang++")
set(OpenMP_LIBRARIES "/Users/s23410fw/Documents/software/clang+llvm-7.0.0-x86_64-apple-darwin/lib")
#set(OPENMP_LIBRARIES "/Users/s23410fw/Documents/software/clang+llvm-7.0.0-x86_64-apple-darwin/lib/clang/7.0.0/lib/")
#set(OPENMP_INCLUDES "/Users/s23410fw/Documents/software/clang+llvm-7.0.0-x86_64-apple-darwin/include/")
set(OpenMP_INCLUDES "/Users/s23410fw/Documents/software/clang+llvm-7.0.0-x86_64-apple-darwin/lib/clang/7.0.0/include/")
#include_directories("/Users/s23410fw/Documents/software/clang+llvm-7.0.0-x86_64-apple-darwin/lib/clang/7.0.0/include/")
set(OpenMP_C "${CMAKE_CXX_COMPILER}")
set(OpenMP_C_FLAGS "-fopenmp") #=libomp -Wno-unused-command-line-argument") # -I/Users/s23410fw/Documents/software/clang+llvm-7.0.0-x86_64-apple-darwin/lib/clang/7.0.0/include/")
set(OpenMP_C_LIB_NAMES "libomp" "libgomp" "libiomp5")
#set(OpenMP_libomp_LIBRARY ${OpenMP_C_LIB_NAMES})
#set(OpenMP_libgomp_LIBRARY ${OpenMP_C_LIB_NAMES})
#set(OpenMP_libiomp5_LIBRARY ${OpenMP_C_LIB_NAMES})
#set(OpenMP_CXX "${CMAKE_CXX_COMPILER}") # -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk")
set(OpenMP_CXX_FLAGS "-fopenmp")
#set(OpenMP_CXX_FLAGS "-Wno-unused-command-line-argument")# -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk")
set(OpenMP_CXX_LIB_NAMES "libomp" "libgomp" "libiomp5")
set(OpenMP_libomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
set(OpenMP_libgomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
set(OpenMP_libiomp5_LIBRARY ${OpenMP_CXX_LIB_NAMES})
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()


#set(LLVM_LIBRARYDIR /Users/s23410fw/Documents/software/clang+llvm-7.0.0-x86_64-apple-darwin/include/llvm-c)
#find_package(LLVM REQUIRED CONFIG)
#include_directories(${LLVM_INCLUDE_DIRS})
#add_definitions(${LLVM_DEFINITIONS})
#llvm_map_components_to_libnames(llvm_libs support core irreader)
#target_link_libraries( ${llvm_libs} )
#if (OPENMP_FOUND)
#    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
#    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
#    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
#endif()
